# practice

./: .gitignore  README.md
GameProj/Chapter1/: Chapter1.vcxproj  Main.cpp
GameProj/Chapter2/: Chapter2.filters  Chapter2.sln  Chapter2.vcxproj  Main.cpp  Resource.rc
TheCppProgrammingLanguage/: .gitignore  readme.md
TheCppProgrammingLanguage/TestProject/: CMakeLists.txt  TestProject.sln  TestProject.vcxproj  TestProject.vcxproj.filters  progress.txt
TheCppProgrammingLanguage/TestProject/ch3/: CMakeLists.txt  Less_than.cpp  Less_than.h  Shape.h  TestApplication.cpp  Vector.cpp  Vector.h  complex.h  user.cpp  vector_template.cpp  vector_template.h
TheCppProgrammingLanguage/TestProject/ch4/: CMakeLists.txt  ch4main.cpp
TheCppProgrammingLanguage/TestProject/ch5/: CMakeLists.txt  ch5main.cpp
TheCppProgrammingLanguage/TestProject/src/: Less_than.h  Shape.cpp  Shape.h  TestApplication.cpp  Vector.cpp  Vector.h  complex.cpp  complex.h  pch.h  user.cpp  vector_template.cpp  vector_template.h
TheSelfTaughtProgrammer_python/: ch11.py  ch11_ch.py  ch14.py  ch14_ch.py  ch17.py  ch4.py  ch4_ch.py  ch5.py  ch5_ch.py  ch6.py  ch6_ch.py  ch7.py  ch7_ch.py  ch8.py  ch8_ch.py  ch9.py  ch9_ch.py  cubed.py  hw.py
TheSelfTaughtProgrammer_python/ch10/: ch10.py  hangman.py  hangman_org.py
TheSelfTaughtProgrammer_python/ch13/: ch13.py  ch13_2.py  ch13_ch.py
TheSelfTaughtProgrammer_python/ch15/: card.py  main.py
html-css-js/saruwaka/: s3.html  (+2 more)
ml-at-work/: readme.md
react-redux/: readme.md
spring/: TODO.md  note.md
仕事ではじめる機械学習/: readme.md
仕事で始める機械学習/: readme.md
(+305 files in other folders)
